# pastebin-rs

./: Cargo.toml  README.md  schema.sql  test.db
migrations/: 20220624025352_create_pastes.down.sql  20220624025352_create_pastes.up.sql
src/: lib.rs  main.rs
